--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta charset="utf-8" />
   </head>
   <body>
-    <script src="index.js"></script>
+    <script src="./index.js"></script>
+    <script src="./classes.js"></script>
+    <script src="./functions.js"></script>
   </body>
 </html>
