add const.js to index.html

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <script src="./index.js"></script>
+    <script src="./const.js"></script>
     <script src="./classes.js"></script>
     <script src="./functions.js"></script>
   </body>
