--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.10.2/p5.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.10.2/addons/p5.sound.min.js"></script>
     <link rel="stylesheet" type="text/css" href="index.css" />
+    <title>Space Fighter</title>
     <meta charset="utf-8" />
   </head>
   <body>
