--- a/index.html
+++ b/index.html
@@ -1,8 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="icon" href="./favicon.ico" />
+    <link rel="apple-touch-icon" href="./favicon.png" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.10.2/p5.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.10.2/addons/p5.sound.min.js"></script>
+    <script
+    src="https://kit.fontawesome.com/54f5c6a52b.js"
+    crossorigin="anonymous"
+  ></script>
     <link rel="stylesheet" type="text/css" href="index.css" />
     <title>Space Fighter</title>
     <meta charset="utf-8" />
@@ -11,5 +17,20 @@
     <script src="./const.js"></script>
     <script src="./index.js"></script>
     <script src="./functions.js"></script>
+
+ 
+    <div class="footer">
+      Coded by
+      <a
+        href="https://github.com/aman-atg"
+        target="_blank"
+        rel="noopener noreferrer"
+      >
+        Aman Ansari
+      </a>
+      With <i class="fas fa-heart"></i> And
+      <i class="fas fa-mug-hot"> </i>
+    </p>
+    </div>
   </body>
 </html>
