--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="icon" href="./favicon.ico" />
+    <link rel="icon" href="./favicon.ico?v=2" />
     <link rel="apple-touch-icon" href="./favicon.png" />
     <link
       rel="stylesheet"
