update folder structure

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="icon" href="./favicon.ico?v=2" />
-    <link rel="apple-touch-icon" href="./favicon.png" />
+    <link rel="icon" href="./public/favicon.ico?v=2" />
+    <link rel="apple-touch-icon" href="./public/favicon.png " />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/github-fork-ribbon-css/0.2.3/gh-fork-ribbon.min.css"
@@ -13,7 +13,7 @@
       src="https://kit.fontawesome.com/54f5c6a52b.js"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" type="text/css" href="index.css" />
+    <link rel="stylesheet" type="text/css" href="./assets/css/index.css" />
     <title>Space Fighter</title>
     <meta charset="utf-8" />
   </head>
@@ -25,9 +25,13 @@
       title="Fork me on GitHub"
       >Fork me on GitHub</a
     >
-    <script src="./const.js"></script>
-    <script src="./index.js"></script>
-    <script src="./functions.js"></script>
+    <script src="./assets/js/const.js"></script>
+    <script src="./assets/js/index.js"></script>
+    <script src="./assets/js/functions.js"></script>
+
+    <div class="instructions">
+      Left arrow
+    </div>
 
     <div class="footer">
       <p>
