--- a/index.html
+++ b/index.html
@@ -29,8 +29,28 @@
     <script src="./assets/js/index.js"></script>
     <script src="./assets/js/functions.js"></script>
 
+    <button class="btn"> !</button>
+
     <div class="instructions">
-      Left arrow
+      <div class="howToPlay">
+        <h3>Controls</h3>
+        <span class="ctrl">
+          <span class="text"> Move left </span>
+          <img src="./public/left-arrow.png" alt="left" />
+        </span>
+        <span class="ctrl">
+          <span class="text"> Move right </span>
+          <img src="./public/right-arrow.png" alt="right" />
+        </span>
+        <span class="ctrl">
+          <span class="text"> Move up </span>
+          <img src="./public/up-arrow.png" alt="up" />
+        </span>
+      </div>
+      <div class="settings">
+        <h3>Settings</h3>
+        Sound : Key S
+      </div>
     </div>
 
     <div class="footer">
