add info element + hover effect

--- a/index.html
+++ b/index.html
@@ -29,9 +29,8 @@
     <script src="./assets/js/index.js"></script>
     <script src="./assets/js/functions.js"></script>
 
-    <button class="btn"> !</button>
-
-    <div class="instructions">
+    <div class="info"> <img class="btn" src="./public/exclamation.svg" alt="info"> </div>
+    <div class="instructions hide">
       <div class="howToPlay">
         <h3>Controls</h3>
         <span class="ctrl">
