--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
     <script src="./assets/js/index.js"></script>
     <script src="./assets/js/functions.js"></script>
 
-    <div class="info"> <img class="btn" src="./public/exclamation.svg" alt="info"> </div>
+    <div class="info">
+      <img class="btn" src="./public/exclamation.svg" alt="info" />
+    </div>
     <div class="instructions hide">
       <div class="howToPlay">
         <h3>Controls</h3>
