--- a/index.html
+++ b/index.html
@@ -36,21 +36,24 @@
       <div class="howToPlay">
         <h3>Controls</h3>
         <span class="ctrl">
-          <span class="text"> Move left </span>
+          <span class="text"> Go Left </span>
           <img src="./public/left-arrow.png" alt="left" />
         </span>
         <span class="ctrl">
-          <span class="text"> Move right </span>
+          <span class="text"> Go Right </span>
           <img src="./public/right-arrow.png" alt="right" />
         </span>
         <span class="ctrl">
-          <span class="text"> Move up </span>
+          <span class="text"> Go Up </span>
           <img src="./public/up-arrow.png" alt="up" />
         </span>
       </div>
       <div class="settings">
         <h3>Settings</h3>
-        Sound : Key S
+        <span class="ctrl">
+          <span class="text"> Sound </span>
+          <img class="enter" src="./public/enterKey.svg" alt="Enter" />
+        </span>
       </div>
     </div>
 
